--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,18 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+html {
+	height: 100%;
+}
+
+body {
+	background-color: #FFFFFF;
+	height: 100%;
+}
+
 .navbar {
 	border: none;
 }
@@ -5,6 +20,10 @@
 .navbar > .container-fluid .navbar-brand {
 	font-size: 30px;
 	margin: 20px 0 0 20px;
+}
+
+.container-fluid {
+	padding-bottom: 15px;
 }
 
 ul.nav.navbar-nav.navbar-right {
@@ -15,41 +34,297 @@ ul.nav.navbar-nav.navbar-right {
  	margin-top: 25px;
  }
 
+ #content {
+ 	margin:50px auto 0;
+ 	height: calc(100% - 135px);
+ }
+
  /*SCROLLER*/
 
- #scroll {
-margin:100px auto;
-overflow:auto;
+.scrollWrapper {
+	position: relative;
+	height: 100%;
 }
-#scroll ul {
-float:left;
-margin-right:-999em;
-white-space:nowrap;
-list-style:none;
+
+#scroll {
+	overflow:auto;
+	height: 100%;
 }
+
+#scroll ul {	
+	float:left;
+	margin-right:-999em;
+	white-space:nowrap;
+	list-style:none;
+}
+
 #scroll li {
-margin:15px;
-text-align:center;
-float:left;
-display:inline;           
+	margin:15px;
+	text-align:center;
+	float:left;
+	display:inline;           
 }
+
 #scroll img {
-border:0;
-display:block;
-border:1px solid #A3CBE0;
+	border:0;
+	display:block;
+	height: 500px;
 }
+
+@media (max-width: 768px) {
+	#scroll img {
+		height: 400px;
+	}
+}
+
 #scroll a:active img, #scroll a:focus img, #scroll a:hover img {
-border:1px solid #000;
+	/*border:1px solid #000;*/
 }
+
 #scroll a {
-text-decoration:none;
-font-weight:bold;
-color:#000;
+	text-decoration:none;
+	font-weight:bold;
+	color:#000;
 }
+
 #scroll a:active, #scroll a:focus, #scroll a:hover {
-color:#FFF;
+	
 }
+
 #scroll span {
-padding:5px 0 0;
-display:block;
+	padding:5px 0 0;
+	display:block;
 }
+
+#scroll ul li img{
+	
+}
+
+.painting {
+	display: none;
+}
+
+.other {
+	display: none;
+}
+
+.about {
+	display: none;
+}
+
+.aboutImg {
+	display: inline-block;
+	width: 49%;
+	text-align: center;
+	overflow: hidden;
+	position: relative;
+}
+
+.aboutP {
+	display: inline-block;
+	width: 49%;
+	vertical-align: top;
+	margin-top: 50px; 
+}
+
+.about p {
+	display: inline-block;
+	margin: 10px;
+}
+
+@media (max-width: 814px) {
+	.aboutP {
+		width: 70%;
+		margin: 20px auto;
+		display: block;
+	}
+
+	.aboutImg {
+		margin: 0 auto;
+		display: block;
+		width: 360px;
+	}
+
+	.about img {
+		width: 360px;
+	}
+}
+
+/*CONTACT*/
+
+
+.contactWrapper {
+	width: 500px;
+	margin: 0 auto;
+	color: #777;
+}
+
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
+  color: #bbb5af;
+}
+
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
+  color: #bbb5af;
+}
+
+input::placeholder, textarea::placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::placeholder, textarea::focus:placeholder {
+  color: #bbb5af;
+}
+
+input::-ms-placeholder, textarea::-ms-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
+  color: #bbb5af;
+}
+
+/* on hover placeholder */
+
+input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::placeholder, textarea:hover:focus::placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
+  color: #cbc6c1;
+}
+
+/*body {
+  font-family: 'Lato', sans-serif;
+  background: #e2dedb;
+  color: #b3aca7;
+}
+
+header {
+  position: relative;
+  margin: 100px 0 25px 0;
+  font-size: 2.3em;
+  text-align: center;
+  letter-spacing: 7px;
+}*/
+
+#form {
+  position: relative;
+  width: 500px;
+  margin: 50px auto 100px auto;
+}
+
+input {
+  font-family: 'Lato', sans-serif;
+  font-size: 0.875em;
+  width: 470px;
+  height: 50px;
+  padding: 0px 15px 0px 15px;
+  
+  background: transparent;
+  outline: none;
+  color: #726659;
+  
+  border: solid 1px #b3aca7;
+  border-bottom: none;
+  
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+
+input:hover {
+  background: #b3aca7;
+  color: #e2dedb;
+}
+
+textarea {
+  width: 470px;
+  max-width: 470px;
+  height: 110px;
+  max-height: 110px;
+  padding: 15px;
+  
+  background: transparent;
+  outline: none;
+  
+  color: #726659;
+  font-family: 'Lato', sans-serif;
+  font-size: 0.875em;
+  
+  border: solid 1px #b3aca7;
+  
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+
+textarea:hover {
+  background: #b3aca7;
+  color: #e2dedb;
+}
+
+#submit {
+  width: 470px;
+  
+  padding: 0;
+  margin: -5px 0px 0px 0px;
+  
+  font-family: 'Lato', sans-serif;
+  font-size: 0.875em;
+  color: #b3aca7;
+  
+  outline:none;
+  cursor: pointer;
+  
+  border: solid 1px #b3aca7;
+  border-top: none;
+}
+
+#submit:hover {
+  color: #e2dedb;
+}
+
